# makeathon-2026-reply

./: .env  .env.example  .gitignore  AGENTS.md  README.md  dev.sh  fly.toml
backend/agent-voice/: .env.example  .gitignore  README.md  pyproject.toml  test_voice.py
backend/agent-voice/agent_voice/: __init__.py  audio.py  config.py  conversation_agent.py  elevenlabs_client.py  generate_sounds.py  main.py  models.py  prompts.py  question_agent.py  regex_responses.py  response_cache.py  storage.py  summarizer.py
backend/agent-voice/data/: initial_context.example.yaml
backend/agent-voice/sounds/: f_appreciate_sharing.pcm  f_clearer_picture.pcm  f_connecting_earlier.pcm  f_helpful_context.pcm  f_important_context.pcm  f_processing.pcm  f_taking_account.pcm  opening_default.pcm  r_ai_llm.pcm  r_challenging.pcm  r_excited_passionate.pcm  r_finance.pcm  r_internship.pcm  r_leadership.pcm  r_nervous.pcm  r_not_sure.pcm  r_product_management.pcm  r_project_experience.pcm  r_startup.pcm  r_tum_university.pcm
backend/mcp/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  auth.py  capture_mocks.py  config.py  docs_template.html  launch_public.py  mock.py  public_gateway.py  pyproject.toml  requirements.txt  server.py
backend/mcp/data/mock/: README.md
backend/mcp/data/mock/career/: career_audit_cv.json  career_get_job.json  career_github_audit.json  career_list_events.json  career_list_jobs.json  career_skills_from_courses.json
backend/mcp/data/mock/collab/: collab_search.json
backend/mcp/modules/: auth_tools.py  career.py  collab.py  linkedin.py  matrix.py  mensa.py  moodle.py  mvv.py  navigatum.py  professors.py  tumonline.py  zhs.py
mcp/: auth.py  (+11 more)
(+186 files in other folders)
