[project]
name = "agent-voice"
version = "0.1.0"
description = "Low-latency local voice interview agent for WayTum."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "anthropic>=0.50.0",
  "httpx>=0.27.2",
  "python-dotenv>=1.0.1",
  "sounddevice>=0.5.1",
  "numpy>=1.24.0",
  "pyyaml>=6.0.2",
]

[project.scripts]
agent-voice = "agent_voice.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true
