[project]
name = "waytum-mcp"
version = "0.1.0"
description = "MCP server exposing TUM campus systems as agent-callable tools"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.27.0",
    "httpx>=0.27",
    "playwright>=1.48",
    "pydantic>=2.0",
    "cryptography>=42.0",
    "python-dotenv>=1.0",
    "uvicorn>=0.30",
    "mvg>=0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["modules"]
